fixes spacing between profile pop-up buttons

--- a/app/components/Nav.css
+++ b/app/components/Nav.css
@@ -21,3 +21,11 @@
   }
 
 }
+
+.user-popover {
+
+  & .pt-button {
+    margin-bottom: 10px;
+  }
+
+}
